feat: add point to about me slide

--- a/slides/00.md
+++ b/slides/00.md
@@ -2,6 +2,7 @@
 
 - 🏡 Charlotte, NC
 - 📚 Studied at UNC Charlotte (B.A. and M.S. in Computer Science)
+- ⭐ Frontend Development and Human-Computer Interaction
 - 🐈 Cat owner (I love dogs too)
 - 💁‍♀️ Portfolio: elizabeththompson.me
 - 👩‍💻 Github: @elizabethompson
